objects/TestEEL1__c.object
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <label>Field1</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Field2__c</fullName>
        <label>Field2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Field3__c</fullName>
        <label>Field3</label>
        <type>Email</type>
    </fields>
    <label>TestEEL1</label>
    <nameField>
        <label>TestEEL1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestEEL1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>